feat: implement plugin system (#429)
